@@ -2,6 +2,7 @@
  * AppController.h
  *
  * Copyright (c) 2002 Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+ * Copyright (c) 2002-2009, GNUstep Project
  *
  * This file is part of EasyDiff.app.
  *
@@ -28,9 +29,20 @@
 
 @interface AppController : NSObject
 {
-  NSMenuItem *windowMenuItem;
+  NSString *cvsExecPath;
+  
+  IBOutlet NSPanel *prefPanel;
+  IBOutlet NSTextField *cvsPathField;
 }
-//- (void) awakeFromNib;
+
+- (IBAction) compareFiles: (id)sender;
+- (IBAction) compareFileToCVS: (id)sender;
+
+- (IBAction)showPrefPanel: (id)sender;
+- (IBAction)prefApply: (id)sender;
+- (IBAction)prefCancel: (id)sender;
+- (IBAction)prefChooseCvsExec: (id)sender;
+
 @end
 
 #endif
