@@ -1,63 +1,41 @@
 #
 # GNUmakefile - Generated by ProjectCenter
-# Written by Philippe C.D. Robert <probert@siggraph.org>
-#
-# NOTE: Do NOT change this file -- ProjectCenter maintains it!
-#
-# Put all of your customisations in GNUmakefile.preamble and
-# GNUmakefile.postamble
 #
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
-
 #
-# Subprojects
+# Application
 #
+VERSION = 0.4.0
+PACKAGE_NAME = EasyDiff
+APP_NAME = EasyDiff
+EasyDiff_APPLICATION_ICON = 
 
-
-
-#
-# Main application
-#
-
-PACKAGE_NAME=EasyDiff
-APP_NAME=EasyDiff
-EasyDiff_APPLICATION_ICON=
-EasyDiff_MAIN_MODEL_FILE=main.gorm
-
-
-#
-# Additional libraries
-#
-
-ADDITIONAL_GUI_LIBS += 
 
 #
 # Resource files
 #
+EasyDiff_RESOURCE_FILES = \
+Resources/main.gorm \
+Resources/window.gorm \
+Resources/Info-gnustep.plist 
 
-EasyDiff_RESOURCE_FILES= \
-main.gorm \
-window.gorm \
-EasyDiffInfo.plist 
 
 #
 # Header files
 #
-
-EasyDiff_HEADER_FILES= \
+EasyDiff_HEADER_FILES = \
 AppController.h \
 DiffTextView.h \
 DiffMiddleView.h \
 DiffView.h \
-DiffWindowController.h 
+DiffWindowController.h
 
 #
 # Class files
 #
-
-EasyDiff_OBJC_FILES= \
+EasyDiff_OBJC_FILES = \
 main.m \
 AppController.m \
 DiffTextView.m \
@@ -65,16 +43,12 @@ DiffMiddleView.m \
 DiffView.m \
 DiffWrapper.m \
 DiffWindowController.m \
-DiffScroller.m 
+DiffScroller.m
 
 #
-# C files
+# Makefiles
 #
-
-EasyDiff_C_FILES= 
-
 -include GNUmakefile.preamble
--include GNUmakefile.local
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 include $(GNUSTEP_MAKEFILES)/application.make
 -include GNUmakefile.postamble
